--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "bun run --bun vite",
-
     "build": "bun run --bun vite build",
     "lint": "bun run --bun eslint .",
     "preview": "bun run --bun vite preview"
   },
   "dependencies": {
+    "convex": "^1.23.0",
     "framer-motion": "^11.0.8",
+    "intersection-observer": "^0.12.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "intersection-observer": "^0.12.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
